WIP: toolbar, localization & speeddial changes

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -90,6 +90,11 @@
 	"action.zoom-to-100": "Auf 100 % zoomen",
 	"action.zoom-to-fit": "Anpassen durch Zoomen",
 	"action.zoom-to-selection": "Zoom auf Auswahl",
+	"action-svb.add-from-edubreak": "Inhalte aus edubreak® einfügen",
+	"action-svb.upload-content": "Inhalt hochladen",
+	"action-svb.create-screen-recording": "Bildschirmaufnahme erstellen",
+	"action-svb.import-media": "Medien Importieren",
+	"action-svb.share-board": "Board teilen",
 	"color-style.black": "Schwarz",
 	"color-style.blue": "Blau",
 	"color-style.green": "Grün",
@@ -191,6 +196,8 @@
 	"tool.note": "Hinweis",
 	"tool.embed": "Einbetten",
 	"tool.text": "Text",
+	"tool.viewzone": "Viewzone",
+	"tool.present": "Präsentation",
 	"menu.title": "Menü",
 	"menu.copy-as": "Kopieren als",
 	"menu.edit": "Bearbeiten",
