--- a/assets/translations/main.json
+++ b/assets/translations/main.json
@@ -89,6 +89,11 @@
 	"action.zoom-to-100": "Zoom to 100%",
 	"action.zoom-to-fit": "Zoom to fit",
 	"action.zoom-to-selection": "Zoom to selection",
+	"action-svb.add-from-edubreak": "Add content from edubreak®",
+	"action-svb.upload-content": "Upload content",
+	"action-svb.create-screen-recording": "Create screen recording",
+	"action-svb.import-media": "Import media",
+	"action-svb.share-board": "Share board",
 	"color-style.black": "Black",
 	"color-style.blue": "Blue",
 	"color-style.green": "Green",
@@ -190,6 +195,8 @@
 	"tool.note": "Note",
 	"tool.embed": "Embed",
 	"tool.text": "Text",
+	"tool.viewzone": "Viewzone",
+	"tool.present": "Present",
 	"menu.title": "Menu",
 	"menu.copy-as": "Copy as",
 	"menu.edit": "Edit",
