artefact menu added and styled, SVB-25 finished

--- a/assets/translations/languages.json
+++ b/assets/translations/languages.json
@@ -20,6 +20,14 @@
 		"label": "English"
 	},
 	{
+		"locale": "svh-de",
+		"label": "SVH Deutsch"
+	},
+	{
+		"locale": "svh-en",
+		"label": "SVH English"
+	},
+	{
 		"locale": "es",
 		"label": "Español"
 	},
