--- a/assets/translations/main.json
+++ b/assets/translations/main.json
@@ -319,5 +319,8 @@
 	"vscode.file-open.backup": "Backup",
 	"vscode.file-open.backup-saved": "Backup saved",
 	"vscode.file-open.backup-failed": "Backup failed: this is not a .tldr file.",
-	"vscode.file-open.dont-show-again": "Don't ask again"
+	"vscode.file-open.dont-show-again": "Don't ask again",
+	"artefact-menu.header": "edubreak® Content",
+	"artefact-menu.only-show-marked-content": "Only show marked content from edubreak®",
+	"artefact-menu.no-artefacts": "Sadly, there is no content that could be used"
 }
