--- a/assets/translations/main.json
+++ b/assets/translations/main.json
@@ -322,5 +322,6 @@
 	"vscode.file-open.dont-show-again": "Don't ask again",
 	"artefact-menu.header": "edubreak® Content",
 	"artefact-menu.only-show-marked-content": "Only show marked content from edubreak®",
-	"artefact-menu.no-artefacts": "Sadly, there is no content that could be used"
+	"artefact-menu.no-artefacts": "Sadly, there is no content that could be used",
+	"artefact.add": "Add"
 }
