--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -336,5 +336,6 @@
 	"artefact-menu.header": "edubreak® Inhalte",
 	"artefact-menu.only-show-marked-content": "Zeige nur in edubreak® markierte Inhalte",
 	"artefact-menu.no-artefacts": "Leider gibt es noch keine Inhalte, die verwendet werden könnten",
-	"artefact.add": "Hinzufügen"
+	"artefact.add": "Hinzufügen",
+	"shape.content-no-assignment": "Keine Aufgabe"
 }
