--- a/assets/translations/main.json
+++ b/assets/translations/main.json
@@ -323,5 +323,6 @@
 	"artefact-menu.header": "edubreak® Content",
 	"artefact-menu.only-show-marked-content": "Only show marked content from edubreak®",
 	"artefact-menu.no-artefacts": "Sadly, there is no content that could be used",
-	"artefact.add": "Add"
+	"artefact.add": "Add",
+	"shape.content-no-assignment": "No Assignment"
 }
